project/tests/rsl_test_cases/pass/Example.rsl
scheme Example = 
    class
        value 
            add Int >< Int -> Int
            add(x, y) is x + y
    end